2007-01-16  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/Makefile.am: Fixed non-portable parts of the Makefile
	reported by the latest stable automake 1.10

2007-01-14  Adam Piatyszek  <ediap@users.sourceforge.net>

	* NEWS, NEWS-3.10: NEWS file with 3.10 series information copied
	to NEWS-3.10. Preliminary information for 3.99.x
	development releases prepared in NEWS.

==============================================================================

2007-01-14  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.10.8 released (SVN tag: release-3-10-8)
	(merged rev. 828:830 from the itpp-3-10 branch)

2007-01-13  Adam Piatyszek  <ediap@users.sourceforge.net>

	* NEWS: Updated to reflect recent changes
	(merged rev. 828:830 from the itpp-3-10 branch)

	* itpp/comm/ldpc.cpp, itpp/comm/ldpc.h, tests/channel_test.cpp,
	tests/ldpc_test.cpp: Added missing SVN properities

2007-01-13  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/ldpc.cpp, itpp/comm/ldpc.h, itpp/comm/modulator_nd.h,
	itpp/comm/modulator_nd.cpp: Code cleanup, removing local
	declarations, etc.

2007-01-11  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/ldpc.cpp, tests/ldpc_test.ref: Minor enhancements

	* itpp/base/specmat.h, itpp/base/specmat.cpp: Added function
	"zigzag_space()"
	
2007-01-09  Conrad Sanderson  <conrad_s@users.sourceforge.net>

	* itpp/base/itassert.cpp: Changed "Assertation" to "Assertion"

2007-01-07  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* AUTHORS, doc/local/authors.doc, itpp/comm/ldpc.h,
	itpp/comm/ldpc.cpp, itpp/itcomm.h, itpp/tests/ldpc_test.cpp,
	itpp/tests/ldpc_test.ref, itpp/comm/sources.mk, tests/Makefile.am,
	doc/tutorial/tutorial.doc, doc/tutorial/sources.mk,
	doc/tutorial/src/sources.mk, doc/tutorial/ldpc_gen_codes.doc,
	doc/tutorial/ldpc_bersim_awgn.doc,
	doc/tutorial/src/ldpc_gen_codes.cpp,
	doc/tutorial/src/ldpc_bersim_awgn.cpp: Added first version of the
	LDPC codec class
