@@ -66,4 +66,4 @@ The tables truncates at the LLR value 9.375
 -------------------------------------------------
 
 
-[23625 44694 52954 25049 33439 29853 59945 30385 22718 12071 37012 73868 45940 48085 34535 22022 47165 52413 23258 58284 50495 35488 38476 31772 45970]
+[23625 13689 47710 30885 36812 15520 35783 21200 27478 20175 -5419 23168 17985 24996 13887 33954 49748 28156 4319 1545 36357 25265 16982 19169 39893]
